--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "antd": "^4.2.0",
+    "antd": "^3.23.6",
     "node-sass": "^4.14.1",
+    "rc-pagination": "^2.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-js-pagination": "^3.0.3",
     "react-player": "^2.0.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1"
