--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "antd": "^3.23.6",
+    "antd": "^4.2.3",
     "node-sass": "^4.14.1",
+    "query-string": "^6.12.1",
     "rc-pagination": "^2.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
