--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
+    "deploy":"npm run test && vercer",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
